# actix-chat

./: .env  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend/migrations/2022-08-22-113522_create_messages/: up.sql
backend/migrations/2022-08-23-123411_addCreatedAt/: up.sql
backend/src/: main.rs  types.rs
backend/src/handlers/: health.rs  messages.rs  mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  main.rs
frontend/src/components/: chat_message.rs  header.rs  input_btn.rs  message_list.rs  mod.rs
lib/: Cargo.toml
migrations/2022-08-23-123411_addCreatedAt/: down.sql
src/: lib.rs  main.rs  schema.rs
src/entities/: message.rs
src/handlers/: dto.rs  messages.rs  mod.rs  test.rs
src/structs/: test.rs
