[workspace]
members = [
    "backend",
    "frontend",
    "lib"
]

[profile.release]
opt-level = 3
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# link time optimization using using whole-program analysis
lto = true

[profile.release.package.frontend]
# optimization for size ( more aggressive )
opt-level = 'z'