[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
yew = "0.19.3"
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }

